# colcon-powershell

./: .gitignore  .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
colcon_powershell/shell/: powershell.py
colcon_powershell/shell/template/: command_prefix.ps1.em  hook_append_value.ps1.em  hook_prepend_value.ps1.em  package.ps1.em  prefix.ps1.em  prefix_chain.ps1.em
test/: spell_check.words  test_flake8.py  test_spell_check.py
