[metadata]
name = colcon-powershell
version = attr: colcon_powershell.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-powershell/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-powershell/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas, Jacob Perron
maintainer_email = web@dirk-thomas.net, jacob@openrobotics.org
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache-2.0
description = Extension for colcon to provide PowerShell scripts.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.12.0
  psutil>=5.6.0
packages = find:
zip_safe = false

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-powershell
markers =
    flake8
    linter

[options.entry_points]
colcon_core.environment_variable =
    powershell_command = colcon_powershell.shell.powershell:POWERSHELL_COMMAND_ENVIRONMENT_VARIABLE
colcon_core.shell =
    powershell = colcon_powershell.shell.powershell:PowerShellExtension

[options.package_data]
colcon_powershell.shell.template = *.em

[flake8]
import-order-style = google

[coverage:run]
source = colcon_powershell
